--- a/templates/competitions/competition_list.html
+++ b/templates/competitions/competition_list.html
@@ -115,6 +115,7 @@
                             {% elif tag.name == 'Championship' %}bg-primary
                             {% elif tag.name == 'Highland Games' %}bg-success
                             {% elif tag.name == 'Purse' %}bg-success
+                            {% else %}bg-info
                             {% endif %}">
                             {{ tag.name }}
                         </span>
