--- a/templates/registration/athlete_profile.html
+++ b/templates/registration/athlete_profile.html
@@ -6,14 +6,14 @@
 
 {% block content %}
 <div class="container-fluid p-3 d-flex justify-content-center" style="background: linear-gradient(45deg, #222222, #555555);">
-    
+
 <div class="container-fluid p-3" style="background: linear-gradient(45deg, #222222, #555555);">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-10">
       <div class="card shadow-lg p-4" style="border-radius: 20px; background-color: rgba(255, 255, 255, 0.95);">
         <div class="row">
-          <div class="col-12 col-md-4 text-center mb-3">
-            <div class="mx-auto" style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden;">
+          <div class="col-12 col-md-12 text-center mb-3">
+            <div class="mx-auto" style="width: 200px; height: 200px; border-radius: 50%; overflow: hidden;">
               {% if athlete.user.profile_picture %}
               <img src="{{ athlete.user.profile_picture.url }}" alt="Profile Picture" class="img-fluid h-100 w-100" style="object-fit: cover;">
               {% else %}
@@ -21,7 +21,7 @@
               {% endif %}
             </div>
           </div>
-          <div class="col-12 col-md-8 text-center text-md-left">
+          <div class="col-12 col-md-12 text-center">
             <h1 class="mt-3" style="font-weight: 600; color: #333;">{{ athlete.user.first_name|capfirst }}
               {% if athlete.nickname %}"{{ athlete.nickname|capfirst }}"{% endif %} {{ athlete.user.last_name|capfirst }}</h1>
             {% if athlete.bio %}
@@ -118,7 +118,13 @@
                           </span>
                         </td>
                         <td>{{ competition.competition.comp_date }}</td>
-                        <td><a href="{% url 'competitions:competition_scorecard' competition.competition.id %}" class="text-decoration-none">{{ competition.rank }}</a></td>
+                        <td><a href="{% url 'competitions:competition_scorecard' competition.competition.id %}" class="text-decoration-none">
+                            {% if competition.rank == None %}
+                            TBD
+                            {% else %}
+                            {{ competition.rank }}</a>
+                        {% endif %}
+                        </td>
                         <td>
                           {% for event in competition.competition.events.all %}
                           {{ event.name }}{% if not forloop.last %}, {% endif %}
@@ -126,7 +132,7 @@
                         </td>
                           <td>
                             {% if competition.competition.status == 'completed' and request.user == profile_user %}
-                                <a href="{% url 'competitions:competition_overlay' competition.competition.pk user.pk %}" 
+                                <a href="{% url 'competitions:competition_overlay' competition.competition.pk user.pk %}"
                                    class="btn btn-primary btn-sm">
                                    View Overlay
                                 </a>
